welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.error
FlowerPot:7: error: value YEllOW is not a member of object java.awt.Color
  centre(Color.YEllOW)
               ^